Added new JFrame screens, modified sql script.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.ojdbc7.jar=W:\\CSC_545\\ojdbc7.jar
+file.reference.ojdbc7.jar=C:\\Users\\Ethan_2\\Downloads\\ojdbc7.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\EKUStudent\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Ethan_2\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
