--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/GroupProject545.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.DateChooser.jar=../../../../Downloads/1398197092_jdatechooser/jdatechooser/DateChooser.jar
 file.reference.ojdbc7.jar=..\\..\\..\\..\\Downloads\\ojdbc7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc7.jar}
+    ${file.reference.ojdbc7.jar}:\
+    ${file.reference.DateChooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
